src/css/main.scss
/**
 * Project: Project name 
 * File:    Main SCSS
 */

$guss-webfonts-base-url: '//pasteup.guim.co.uk/fonts/';
@import 'bower_components/guss-webfonts/src/_webfonts.scss';
@include guss-webfonts();

@import 'modules/mq';

.element-interactive {

	@include mq($until: mobileLandscape)  {
		table, thead, tbody, th, td, tr { 
			display: block;
		}

		thead tr { 
			position: absolute;
			top: -9999px;
			left: -9999px;
		}

		th {
			border-bottom: none;
			vertical-align: top;
		}


		td { 
			border: none;
			border-bottom: 0 !important;
			position: relative; 
		}
	}

	tr th {
		padding: 6px 20px 6px 0;
	}

	table {
		border-collapse: collapse;
		width: 100%;
	}

	tr {
		@include mq($until: mobileLandscape) {
			padding: 12px 0;
			border-bottom: 1px solid #dcdcdc;
		}
	}

	.highlighted {
		background-color: #edf9fc;
	}

	tr td {
		vertical-align: top;
		padding: 6px 20px 6px 0;
		font-family: "Guardian Text Sans Web";
  		font-size: 12px; 
  		line-height: 16px;
  		color: #676767;
  		border-bottom: 1px dotted #f1f1f1;

  		@include mq($until: mobileLandscape) {
  			padding: 0;
  		}
	}

	.int-table-title {
		font-size: 22px;
		line-height: 28px;
		font-weight: 500;
		-webkit-font-smoothing: antialiased;
		color: #000;
		font-family: "Guardian Egyptian Web", Georgia, serif;
		margin-bottom: 2px;
	}

	.int-table-subtitle {
		color: #333;
		-webkit-font-smoothing: antialiased;
		font-family: "Guardian Text Sans Web", sans-serif;
		font-size: 16px;
		line-height: 24px;
		margin-bottom: 12px;

		@include mq($until: mobileLandscape) {
			font-size: 14px;
			line-height: 20px; 
		}
	}

	#int-table__wrapper {
		position: relative;

		#untruncate {
			display: none;
		}

		&.truncated {
			&:after {
				content: '';
				width: 100%;
				height: 50px;
				position: absolute;
				left: 0;
				bottom: 36px;
				background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
				background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(100%, #ffffff));
				background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
				background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
				background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
				background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
			}

			#untruncate {
				margin-top: 12px;
   				display: block;
   				z-index: 3;
			}
		}
	}
}

.column-header {
	text-align: left;
	color: #767676 !important;
	font-family: "Guardian Text Sans Web", sans-serif !important;
	font-size: 12px !important;
	font-weight: 300 !important;
	vertical-align: top;
	line-height: 12px;
	border-bottom: 2px solid #bdbdbd;
	position: relative;

	@media screen and (-webkit-min-device-pixel-ratio:0) { 
		min-width: 40px;
    	width: 1px;
	}

	&::after {
		content: ' ';
		width: 0;
		height: 0;
		border-left: 3px solid transparent;
		border-right: 3px solid transparent;
		border-bottom: 4px solid #bdbdbd;
		position: absolute;
		top: 8px;
		margin-left: 10px;
		right: 5px;
		opacity: 0;
	}

	&::before {
		content: ' ';
		width: 0;
		height: 0;
		border-left: 3px solid transparent;
		border-right: 3px solid transparent;
		border-top: 4px solid #bdbdbd;
		position: absolute;
		right: 5px;
		top: 13px;
		opacity: 0;
	}

	&:hover {
		cursor: pointer;
		background-color: #f9f9f9;

		&::after {
			opacity: 1;
		}

		&::before {
			opacity: 1;
		}
	}
}

th.column-header.sorted::before {
	opacity: 1;
	top: 11px;
	border-top: 4px solid #333;
	opacity: 1;
}

th.column-header.sorted::after {
	opacity: 0;
	border-bottom: 4px solid #333;
}

th.column-header.sorted-reversed::before {
	border-top: 4px solid #333;
	opacity: 0;
}

th.column-header.sorted-reversed::after {
	display: block;
	top: 11px;
	border-bottom: 4px solid #333;
	opacity: 1;
}

th.column-header.sorted, th.column-header.sorted-reversed {
	border-bottom: 2px solid #333;
	font-weight: 600 !important;
}

#search-field {
	height: 36px;
	border: 1px solid #dfdfdf;
	border-radius: 24px;
	padding: 4px 12px;
	width: 100%;
	font-size: 14px;
	margin-bottom: 18px;
	color: #767676;
	max-width: 620px;
	box-sizing: border-box;

    &:focus {
    	outline: 0;
    	border: 1px solid #767676;
    	color: #333;
    }
}

.column svg {
	width: 120px;
	height: 26px;
	display: block;
	padding: 3px 0;
	padding-right: 20px;

	@include mq($until: desktop) {
		width: 90px;
		height: 20px;
		display: inline;
	}
}

figure {
	margin: 0 !important;
	padding-top: 12px;
}

.int-button {
	-webkit-font-smoothing: antialiased;
	background-color: #005689;
    border: 0;
    border-radius: 100px;
    color: white;
    display: inline-block;
    font-family: 'Guardian Text Sans Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
    font-size: 14px;
    font-weight: 500;
    height: 30px;
    line-height: 30.7999992371px;
    padding-bottom: 0px;
    padding-right: 10px;
    padding-top: 0px;
    position: relative;
    padding-left: 38px;
    margin-top: 24px;

    &:hover {
    	cursor: pointer;
    }

    svg {
    	width: 1.5rem;
	    height: 1.5rem;
	    vertical-align: middle;
	    margin: auto;
	    position: absolute;
	    top: 0;
	    bottom: 0;
	    left: 0.4375rem;
	    fill: #fff;
    }
}

